I added an extra }

--- a/locale/commands/NabiInfo.toml
+++ b/locale/commands/NabiInfo.toml
@@ -1,7 +1,7 @@
 [string]
 embedBodySystemInformation = """
     **Operating System:** {0} ({1}; {2}) \n\
-    **RAM Usage:** {3}}/{4} [{5}] \n\
+    **RAM Usage:** {3}/{4} [{5}] \n\
     **Java Version:** {6} \n\
     **Java Distributor:** {7} \n\
     **Kotlin Version:** {8}
