uhuhuhuhuhuhuhuhhuhuhuhuhuh (Yeah I forgot to back up my drives and something got wiped thanks windows for being useless)

--- a/locale/commands/NabiInfo.toml
+++ b/locale/commands/NabiInfo.toml
@@ -1,4 +1,6 @@
 [string]
+name = "info"
+description = "Returns information regarding Nabi."
 embedBodySystemInformation = """
     **Operating System:** {0} ({1}; {2}) \n\
     **RAM Usage:** {3}/{4} [{5}] \n\
@@ -6,7 +8,6 @@ embedBodySystemInformation = """
     **Java Distributor:** {7} \n\
     **Kotlin Version:** {8}
 """
-
 embedBodyGatewayInformation = """
     **Gateway Ping:** {0} ms \n\
     **Shards Launched This Session:** {1} \n\
