--- a/locale/commands/UserInfo.toml
+++ b/locale/commands/UserInfo.toml
@@ -3,8 +3,7 @@ name = "user"
 description = "Looks up the sequestered user's information."
 embedUserBody = """
     **Mention:** {0} \n\
-    **Join Date:** {1} \n\
-    **
+    **Join Date:** {1}
 """
 embedMemberBody = """
     **Member Name:** {0} \n\
