--- a/locale/commands/UserInfo.toml
+++ b/locale/commands/UserInfo.toml
@@ -14,5 +14,5 @@ embedMemberField = """
 secretKeyYujin = "I'm cute <3"
 secretKeyLily = "gg"
 secretKeyNicky = "(secretly a catgirl)"
-secretKeyJaminul = "Please give Skyblock coins ty"
+secretKeyJaminul = "Please give Skyblock coins and Hyperions ty"
 secretKeyMeph = "Spooky"
