--- a/locale/commands/UserInfo.toml
+++ b/locale/commands/UserInfo.toml
@@ -1,6 +1,9 @@
 [string]
 name = "user"
 description = "Looks up the sequestered user's information."
+nameUserDeclarator = "User Information"
+userOptionName = "user"
+userOptionDescription = "The user you want to look up."
 embedEasterEggName = "I have an easter egg!"
 embedUserField = """
     **Mention:** {0} \n\
