--- a/resources/locales/en/commands/BanCommand.toml
+++ b/resources/locales/en/commands/BanCommand.toml
@@ -1,3 +1,9 @@
-[ban]
+[command]
 name = "Ban"
 description = "Bans the specified user from the current guild."
+
+[error]
+permissionIsMissing = """
+    Nabi is currently missing the `BAN_MEMBERS` permission. Please check if Nabi has the required permissions
+    to execute the commands, and try again.
+"""
