--- a/resources/locales/en/commands/moderation/Kick.toml
+++ b/resources/locales/en/commands/moderation/Kick.toml
@@ -7,4 +7,13 @@ reasonOptionName = "reason"
 reasonOptionDescription = "The reason this user is being kicked."
 
 [error]
-userIsNull = "The user you've specified seems to not be in the server."
+permissionIsMissing = """
+    Nabi is currently missing the `KICK_MEMBERS` permission. Please check if Nabi has the required permissions
+    to execute the commands, and try again.
+"""
+targetIsNull = "The user you've specified seems to not be in the server!"
+targetIsOwner = "You can't kick the owner of this server!"
+targetIsNabi = "CEASE >:("
+targetIsSelf = "You can't kick yourself!"
+
+[embed]
