--- a/resources/locales/en/commands/moderation/Ban.toml
+++ b/resources/locales/en/commands/moderation/Ban.toml
@@ -29,7 +29,9 @@ targetIsSelf = "You can't ban yourself!"
 punishmentDescription = "You've been banned from **{guildName}** for **{reason}**."
 resultantTitle = "User Banned"
 resultantDescription = """
-    **Member:** {member} \n\
-    **Action:** {action} \n\
-    **Reason:** {reason}
+    A user has been sucessfully banned.
+
+    • **Member:** {member} \n\
+    • **Action:** {action} \n\
+    • **Reason:** {reason}
 """
