--- a/resources/locales/en/commands/moderation/Unban.toml
+++ b/resources/locales/en/commands/moderation/Unban.toml
@@ -21,9 +21,6 @@ targetIsNabi = "You couldn't get rid of me in the first place :))))))"
 [embed]
 resultantTitle = "User Unbanned"
 resultantDescription = """
-    A user has been successfully unbanned.
-
-    • **Member:** {member} \n\
-    • **Action:** {action} \n\
+    • **User:** {username} - {userMention} - ``{userId}`` \n\
     • **Reason:** {reason}
 """
