Fix toml now time to fix cache

--- a/dashboard/src/docs/about.mdx
+++ b/dashboard/src/docs/about.mdx
@@ -9,9 +9,12 @@ although free, force you to buy their subscription in order to support their ser
 than others. However, most aren't able to subscribe to these services, resulting in their servers being unprotected.
 Nabi is meant to fill that gap, allowing people to properly support their servers!
 
-Made with love and Kotlin, it's meant to be free and open sourced.
-
 ## Is Nabi free?
 Nabi will remain completely free until the service gets shut down for any reason. Nabi and her developers will never
-instate a subscription to lock any services.]
+instate a subscription to lock any services behind a paywall, and make a vow to the open source community for transparency
+related reasons.
 
+## Can I host my own instance of Nabi?
+You can! However, keep in mind you will receive no support if you run into any issues related to the bot, as this is
+intended for large scale operations. If you're looking for a bot which may handle your use case, you may be interested
+in other projects which may offer a solution which fits your needs.
